4.If user entered wrong username and password, alert message popup but it’s behind gray screen, so user cannot click close button - resolved

--- a/client-infrastructure/src/ocInfra/css/omnichannel.css
+++ b/client-infrastructure/src/ocInfra/css/omnichannel.css
@@ -1986,6 +1986,10 @@ a.thumbnail span.glyphicon {
     color: #0096bb;
     }
 }
+
+.modal-backdrop {
+        z-index: 1039 !important;
+    }
 label {display: inline-flex !important;min-height:2px; }
 #Inside City_label{height: 20px;}
 
@@ -2011,3 +2015,5 @@ label {display: inline-flex !important;min-height:2px; }
 .header-margin-wide {
     margin: 10px 0px 0px 0px;
 }
+
+
